--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-server.port=8095
+server.port=8096
 
-db.url=jdbc:postgresql://localhost/db_name?ApplicationName=microservice_name
-db.user=user
-db.password=password
-db.driver=org.postgresql.Driver
+db.url=jdbc:h2:mem:user-data-holder
+db.user=sa
+db.password=
+db.driver=org.h2.Driver
 
 request.payload.logging.maxlength=2000
