--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 server.port=8096
 
-db.url=jdbc:h2:mem:user-data-holder
-db.user=sa
-db.password=
-db.driver=org.h2.Driver
+#db.url=jdbc:h2:mem:user-data-holder
+#db.user=sa
+#db.password=
+#db.driver=org.h2.Driver
 
 request.payload.logging.maxlength=2000
