--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,11 @@ buildscript {
     dependencies {
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.1.4.RELEASE'
         classpath 'com.ofg:uptodate-gradle-plugin:0.0.5'
-		classpath 'com.ofg:micro-deps-gradle-plugin:0.0.1'
-        if(project.hasProperty("coverage")) { classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:1.0.2' }
+        classpath 'com.ofg:micro-deps-gradle-plugin:0.0.2'
+
+        if(project.hasProperty("coverage")) {
+            classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:1.0.2'
+        }
     }
 }
 
@@ -24,13 +27,13 @@ ext {
     buildNrLoc = project.hasProperty('buildNr') ? "${buildNr}" : "000"
     currentVersion = "${versionPrefix}-${buildNrLoc}"
 
-    groovyVersion = '2.3.3'
+    groovyVersion = '2.3.6'
     spockVersion = '0.7-groovy-2.0'
-    springBootVersion = '1.1.3.RELEASE'
+    springBootVersion = '1.1.4.RELEASE'
     jacksonMapper = '1.9.13'
     aspectjVersion = '1.8.1'
     hibernateVersion = '4.3.1.Final'
-    microDepsSpringVersion = '0.2.0'
+    microDepsSpringVersion = '0.2.1'
 
     stubRepositoryUrl = 'http://nexus.microhackathon.pl/content/groups/public/'
     zookeeperPort = 2181
@@ -77,7 +80,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
     compile "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
     compile "org.codehaus.groovy:groovy-all:$groovyVersion:indy"
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1.1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1.3'
     compile "org.codehaus.jackson:jackson-mapper-asl:$jacksonMapper"
     compile "org.codehaus.jackson:jackson-core-asl:$jacksonMapper"
     compile 'com.google.guava:guava:17.0'
@@ -95,8 +98,8 @@ dependencies {
         exclude group: 'org.slf4j'
         exclude group: 'log4j'
     }
-    compile 'com.ofg:micro-infra-spring:0.0.1'
-    compile 'com.h2database:h2:1.4.179'
+    compile 'com.ofg:micro-infra-spring:0.0.3'
+    compile 'com.h2database:h2:1.4.181'
 
     runtime "cglib:cglib-nodep:3.1"
     runtime "org.objenesis:objenesis:2.1" // allows mocking of classes without default constructor (together with CGLIB)
