user data holder deployer

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ env:
 - TERM=dumb
 
 after_success:
-- ./gradlew build uploadArchives -PbuildNr=$TRAVIS_BUILD_NUMBER --info --stacktrace
+- ./gradlew build deployToAws -PbuildNr=$TRAVIS_BUILD_NUMBER --info --stacktrace
 - ./gradlew test jacocoTestReport coveralls -Pcoverage
